--- a/app/globals.css
+++ b/app/globals.css
@@ -1626,6 +1626,7 @@ select {
   /* bg-slate-100 */
   --color-bgbody:         249 250 251;
   /* bg-slate-100/60 */
+  color-scheme:light only;
 }
 
 .dark  {
